# curio

./: .travis.rosinstall  .travis.yml  LICENSE  README.md  SIMULATION.md
ackermann_drive_controller/: CMakeLists.txt  ackermann_drive_controller_plugins.xml  package.xml
ackermann_drive_controller/config/: AckermannDriveController.cfg  control_ackermann_drive.yaml
ackermann_drive_controller/include/ackermann_drive_controller/: ackermann_drive_controller.h  ackermann_drive_enums.h  odometry.h  speed_limiter.h
ackermann_drive_controller/src/: ackermann_drive_controller.cpp  odometry.cpp  speed_limiter.cpp
curio_base/: CMakeLists.txt  README.md  package.xml  setup.py
curio_base/action/: CalibrateImu.action
curio_base/config/: base_controller.yaml  base_motor.yaml  base_sensors.yaml  ekf_localization_local.yaml  motor_controller.yaml
curio_base/data/: lx16a_tree_classifier.joblib
curio_base/include/curio_base/: lx16a_driver.h  lx16a_encoder_filter.h  (+8 more)
curio_base/launch/: arduino_controller.launch  base_controller.launch  base_failsafe.launch  base_motor.launch  base_sensors.launch  imu_and_rc_controller.launch  lx16a_encoder_calibration.launch  motor_controller.launch  rotary_encoder.launch  rover_base_controller.launch  servo_controller.launch  train_classifier.launch  train_regressor.launch
curio_base/nodes/: curio_base_controller  curio_base_failsafe  curio_base_motor_node  curio_base_sensors  curio_motor_controller  lx16a_encoder_filter_server
curio_base/scripts/: imu_calibration_client.py  imu_calibration_server.py  lewansoul_driver.py  lx16a_cmd_vel_random.py  lx16a_cmd_vel_sinusoid.py  lx16a_cmd_vel_stepped.py  lx16a_driver_test.py  lx16a_encoder_calibration.py  lx16a_encoder_filter.py  lx16a_encoder_filter_server.py  lx16a_encoder_filter_server_test.py  lx16a_encoder_filter_test.py  lx16a_encoder_logger.py  lx16a_failsafe_test.py  lx16a_make_training_data.py  lx16a_mean_filter_test.py  lx16a_odometry.py  lx16a_odometry_test.py  lx16a_servo_controller.py  lx16a_train_classifier.py  lx16a_train_regressor.py  odometry_debug_server.py  serial_test.py  servo_controller.py
curio_base/src/: lx16a_driver.cpp  lx16a_encoder_filter.cpp  lx16a_encoder_filter_client.cpp  lx16a_encoder_filter_impl.cpp  lx16a_encoder_filter_onnx.cpp  rover_base_controller.cpp  rover_base_hal.cpp  rover_base_hal_lx16a.cpp  rover_base_hal_mock.cpp  rover_base_hal_python.cpp  rover_base_hardware.cpp
curio_base/srv/: EncoderFilterAdd.srv  EncoderFilterGetAngularPosition.srv  EncoderFilterGetCount.srv  EncoderFilterGetDuty.srv  EncoderFilterGetInvert.srv  EncoderFilterGetRevolutions.srv  EncoderFilterGetServoPos.srv  EncoderFilterReset.srv  EncoderFilterSetInvert.srv  EncoderFilterUpdate.srv
curio_base/test/: test_rover_base_hal_lx16a.cpp
curio_bringup/: CMakeLists.txt  package.xml
curio_bringup/launch/: curio_base.launch  curio_laser_scan.launch  curio_robot.launch  curio_teleop.launch
curio_control/: CMakeLists.txt  package.xml
curio_control/config/: control_ackermann_drive.yaml  control_diff_drive.yaml  ekf_localization_local.yaml
curio_control/launch/: control.launch
curio_controller/: CMakeLists.txt  curio_controller_plugins.xml  package.xml
curio_controller/config/: DiffDriveController.cfg  control_diff_drive.yaml  control_joint_state.yaml
curio_controller/src/: ackermann_drive_controller.cpp  diff_drive_controller.cpp  odometry.cpp  speed_limiter.cpp
curio_description/: CMakeLists.txt  package.xml
curio_description/urdf/: curio.sdf  curio.urdf  curio.urdf.xacro  curio_imu.xacro  curio_inertials.xacro  curio_laser.xacro  curio_materials.xacro
curio_firmware/: CMakeLists.txt  package.xml
curio_gazebo/: CMakeLists.txt  package.xml
curio_gazebo/launch/: curio_empty_world.launch  curio_mars_world.launch  curio_shapes_world.launch  curio_spawn.launch
curio_gazebo/worlds/: empty.world  mars_curiosity.world  shapes.world
curio_navigation/: CMakeLists.txt  package.xml
curio_navigation/config/: costmap_common.yaml  costmap_global.yaml  costmap_global_no_map.yaml  costmap_local.yaml  planner_local.yaml
curio_navigation/launch/: amcl.launch  curio_navigation.launch  move_base.launch  move_base_no_map.launch
curio_navigation/maps/: curio_shapes_map.yaml
curio_teleop/: CMakeLists.txt  package.xml
curio_teleop/config/: teleop_rc.yaml
curio_teleop/launch/: teleop_rc.launch
curio_teleop/src/: curio_teleop_rc.cpp  curio_teleop_rc_node.cpp
curio_viz/: CMakeLists.txt  package.xml
curio_viz/rviz/: curio_navigation.rviz  model.rviz  robot.rviz
lx16a/: CMakeLists.txt  package.xml  setup.py
lx16a/data/: lx16a_raw_data_05.csv  lx16a_tree_classifier.joblib  lx16a_tree_classifier.onnx  lx16a_tree_classifier_python3.joblib  lx16a_tree_regressor.joblib  lx16a_tree_regressor_python3.joblib
lx16a/launch/: train_classifier.launch  train_regressor.launch
lx16a/nodes/: lx16a_encoder_filter_server
lx16a/scripts/: lx16a_cmd_vel_random.py  lx16a_cmd_vel_sinusoid.py  lx16a_driver_test.py  lx16a_encoder_filter_server_test.py  lx16a_encoder_filter_test.py  lx16a_encoder_logger.py  lx16a_failsafe_test.py  lx16a_odometry_test.py  lx16a_train_classifier.py
lx16a/src/: lx16a_driver.cpp  lx16a_encoder_filter.cpp  lx16a_encoder_filter_client.cpp  lx16a_encoder_filter_onnx.cpp  lx16a_encoder_filter_python.cpp  lx16a_exception.cpp  lx16a_pybind11_embed.cpp  lx16a_time.cpp
lx16a/test/: config.in  config_py.in  test_config.in  test_encoder_filter.cpp  test_encoder_filter.py  test_encoder_filter_wrap.py  test_ext_driver.py  test_ext_encoder_filter.py  test_ext_time.py  test_hardware_encoder.cpp  test_hardware_encoder.test
lx16a_msgs/: CMakeLists.txt  package.xml
lx16a_msgs/srv/: EncoderFilterAdd.srv  EncoderFilterAddV.srv  EncoderFilterGetAngularPosition.srv  EncoderFilterGetInvert.srv  EncoderFilterGetRevolutions.srv  EncoderFilterGetServoPos.srv  EncoderFilterSetInvert.srv  EncoderFilterUpdate.srv  EncoderFilterUpdateV.srv
sawppy_base/: CMakeLists.txt  package.xml  setup.py
sawppy_base/scripts/: lewansoul_driver.py  lewansoul_driver_test.py  sawppy_servo_test.py
(+59 files in other folders)
