<?xml version="1.0"?>
<package format="2">
    <name>ackermann_drive_controller</name>
    <version>0.2.2</version>
    <description>Ackermann drive controller for a 6 wheel drive 4 wheel steering robot</description>
    <maintainer email="rhys.manwaring@me.com">Rhys Mainwaring</maintainer>
    <license>BSD-3-Clause</license>
    <url type="website">https://github.com/srmainwaring/curio</url>
    <url type="repository">https://github.com/srmainwaring/curio</url>
    <url type="bugtracker">https://github.com/srmainwaring/curio/issues</url>
    <author email="rhys.manwaring@me.com">Rhys Mainwaring</author>
    <buildtool_depend>catkin</buildtool_depend>

    <depend>controller_interface</depend>
    <depend>control_msgs</depend>
    <depend>dynamic_reconfigure</depend>
    <depend>geometry_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>pluginlib</depend>
    <depend>realtime_tools</depend>
    <depend>roscpp</depend>
    <depend>std_msgs</depend>
    <depend>tf</depend>
    <depend>urdf</depend>

    <export>
        <controller_interface plugin="${prefix}/ackermann_drive_controller_plugins.xml" />
    </export>
</package>
