<?xml version="1.0"?>
<package format="2">
    <name>curio_bringup</name>
    <version>0.0.0</version>
    <description>Launch scripts to bring up Curio, a Sawppy Rover robot</description>
    <maintainer email="rhys.mainwaring@me.com">Rhys Mainwaring</maintainer>
    <license>BSD-3-Clause</license>
    <author email="rhys.mainwaring@me.com">Rhys Mainwaring</author>
    <buildtool_depend>catkin</buildtool_depend>
    <exec_depend>curio_base</exec_depend>
    <exec_depend>curio_description</exec_depend>
    <exec_depend>curio_teleop</exec_depend>
</package>
