<?xml version="1.0"?>
<package format="2">
    <name>curio_bringup</name>
    <version>0.2.1</version>
    <description>Launch scripts to bring up Curio, a Sawppy Rover</description>
    <maintainer email="rhys.mainwaring@me.com">Rhys Mainwaring</maintainer>
    <license>BSD-3-Clause</license>
    <url type="website">https://github.com/srmainwaring/curio</url>
    <url type="repository">https://github.com/srmainwaring/curio</url>
    <url type="bugtracker">https://github.com/srmainwaring/curio/issues</url>
    <author email="rhys.mainwaring@me.com">Rhys Mainwaring</author>
    <buildtool_depend>catkin</buildtool_depend>
    <exec_depend>curio_base</exec_depend>
    <exec_depend>curio_description</exec_depend>
    <exec_depend>curio_teleop</exec_depend>
</package>
