<?xml version="1.0"?>
<package format="2">
  <name>curio_control</name>
  <version>0.0.0</version>
  <description>Controllers for Curio, a Sawppy Rover robot</description>
  <maintainer email="rhys.manwaring@me.com">Rhys Mainwaring</maintainer>
  <license>BSD-3-Clause</license>
  <author email="rhys.manwaring@me.com">Rhys Mainwaring</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>

  <exec_depend>ackermann_drive_controller</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>curio_description</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

</package>
