<?xml version="1.0"?>
<package format="2">
    <name>curio_control</name>
    <version>0.2.2</version>
    <description>Controllers for Curio, a Sawppy Rover</description>
    <maintainer email="rhys.manwaring@me.com">Rhys Mainwaring</maintainer>
    <license>BSD-3-Clause</license>
    <url type="website">https://github.com/srmainwaring/curio</url>
    <url type="repository">https://github.com/srmainwaring/curio</url>
    <url type="bugtracker">https://github.com/srmainwaring/curio/issues</url>
    <author email="rhys.manwaring@me.com">Rhys Mainwaring</author>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roslaunch</build_depend>

    <exec_depend>ackermann_drive_controller</exec_depend>
    <exec_depend>controller_manager</exec_depend>
    <exec_depend>curio_description</exec_depend>
    <exec_depend>joint_state_controller</exec_depend>
    <exec_depend>robot_state_publisher</exec_depend>

</package>
