<?xml version="1.0"?>
<package format="2">
    <name>curio_description</name>
    <version>0.2.0</version>
    <description>URDF and meshes for Curio, a Sawppy Rover</description>
    <maintainer email="rhys.maiwaring@me.com">Rhys Mainwaring</maintainer>
    <license>BSD-3-Clause</license>
    <url type="website">https://github.com/srmainwaring/curio</url>
    <url type="repository">https://github.com/srmainwaring/curio</url>
    <url type="bugtracker">https://github.com/srmainwaring/curio/issues</url>
    <author email="rhys.maiwaring@me.com">Rhys Mainwaring</author>
    <buildtool_depend>catkin</buildtool_depend>
    <depend>urdf</depend>
    <depend>xacro</depend>
    <exec_depend>roslaunch</exec_depend>
</package>
