<?xml version="1.0"?>
<package format="2">
    <name>curio_navigation</name>
    <version>0.2.1</version>
    <description>Navigation configuration and launch files for Curio, a Sawppy Rover.</description>
    <maintainer email="rhys.mainwaring@me.com">Rhys Mainwaring</maintainer>
    <license>BSD-3-Clause</license>
    <url type="website">https://github.com/srmainwaring/curio</url>
    <url type="repository">https://github.com/srmainwaring/curio</url>
    <url type="bugtracker">https://github.com/srmainwaring/curio/issues</url>
    <author email="rhys.mainwaring@me.com">Rhys Mainwaring</author>
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roslaunch</build_depend>
    <exec_depend>amcl</exec_depend>
    <!-- <exec_depend>base_local_planner</exec_depend> -->
    <!-- <exec_depend>dwa_local_planner</exec_depend> -->
    <!-- <exec_depend>gmapping</exec_depend> -->
    <exec_depend>map_server</exec_depend>
    <exec_depend>move_base</exec_depend>
    <!-- <exec_depend>navfn</exec_depend> -->
    <!-- <exec_depend>range_sensor_layer</exec_depend> -->
</package>
