<?xml version="1.0"?>
<package format="2">
    <name>curio_teleop</name>
    <version>0.0.0</version>
    <description>Teleop control for Curio, a Sawppy Rover robot</description>
    <maintainer email="rhys.mainwaring@me.com">Rhys Mainwaring</maintainer>
    <license>BSD-3-Clause</license>
    <author email="rhys.mainwaring@me.com">Rhys Mainwaring</author>
    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
    <depend>std_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>curio_base</depend>
    <depend>curio_msgs</depend>
</package>
